dist/LineScript-win64-20260616/tests/cases/compile_fail/game_scroll_bad_types.lsc
main() -> i64 do
  println(game_scroll_x("bad"))
  return 0
end
